--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -71,6 +72,7 @@
                             <div class="switch_off">NON</div>
                         </label>
                     </div>
+
                 </div>
 
                 <div class="form-group">
@@ -148,6 +150,18 @@
                     </table>
                 </div>
             </div>
+
+                    <h3 class="fs-title">Informations complémentaires</h2>
+                        <div>
+                            <label for="comments" class="w-100 text-left pt-3">Ajouter un commentaire</label>
+                            <textarea id="comments" class="comments" name="comments" th:text="${registration.comments}"></textarea>
+                        </div>
+                        <div>
+                            <label id="finalCost" for="cost" class="registration_cost w-100 text-center mt-4">Coût de l'inscription : 65 euros</label>
+                        </div>
+                        <button type="submit" name="registration" class="next action-button">Valider</button>
+            </form>
+
         </section>
         <hr />
         <section id="games">
@@ -195,8 +209,10 @@
             </div>
             <div th:replace="modaleModificationGame :: modaleModification"></div>
             <div th:replace="modaleCreateGame :: modaleCreation"></div>
+
 			<hr />
         </section>
+
     </main>
     <footer th:replace="footer :: bottom"></footer>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -208,3 +224,4 @@
 </body>
 
 </html>
+
