--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -24,7 +24,7 @@
                 <h2 class="col-sm-12 p-0 mb-4 title">Mes informations générales</h2>
             </div>
 
-            <form method="post" action="#" class="border m-3 p-3 p-4 col-sm-10 col-lg-7 mx-auto">
+            <form method="post" action="/submitRegistration" class="border m-3 p-3 p-4 col-sm-10 col-lg-7 mx-auto">
 
                 <input type="hidden" name="eventId" th:value="${registration.event?.id}">
                 <input type="hidden" id="pricePerTable" name="pricePerTable" th:value="${registration.event?.pricePerTable}" disabled>
