--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -114,6 +114,10 @@ hr {
     animation: toRight 0.5s;
 }
 
+.subscribeBtn {
+	
+}
+
 .containerStyle {
     position: relative;
     width: 80%;
@@ -318,6 +322,11 @@ input:checked ~ .switch_on {
 	border: 1px solid var(--grey)!important;
 }
 
+.regBtn {
+	margin-top: 1.5rem;
+	margin-left: 80%!important
+}
+
 @media (max-width: 768px) {  
 	
 	* {
@@ -344,9 +353,10 @@ input:checked ~ .switch_on {
 		font-size: 1.2rem!important;
 	}
 	
-	.registrateBtn {
+	.regBtn {
 		height: 2.8rem;
-		font-size: 1.4rem;
+		font-size: 1rem;
+		margin-left: 82%!important;
 	}
 	
 	.pcard {
