--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -20,17 +20,19 @@
 	      aria-controls="navbarSupportedContent-333" aria-expanded="false" aria-label="Toggle navigation">
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
-	    <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
-	      <ul class="navbar-nav col-12 col-lg-6 cd-main-nav" th:if="${navbarLinks.currentPage} == 'home'">
-	
+	    <div class="collapse navbar-collapse" id="navbarSupportedContent-333" th:if="${navbarLinks.currentPage} != 'subscribeEditor'">
+	      <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">	
 	        <li class="nav-item mx-auto">
-	          <a class="nav-link navElement" href="#evenement">Evenements</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#evenement">Evenements</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#myRegistration">Mon Inscription</a>
 	        </li>
 	        <li class="nav-item mx-auto">
-	          <a class="nav-link navElement" href="#inscription">Mon Inscription</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#inscription">Mon Inscription</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#agents">Mes Collaborateurs</a>
 	        </li>
 	        <li class="nav-item mx-auto">
-	          <a class="nav-link navElement" href="#information">Mes Informations</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#information">Mes Informations</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#games">Mes Jeux</a>
 	        </li>
 	        <div class="dropdown-divider mt-3 mb-0"></div>
 	        <li class="nav-item mx-auto d-block d-lg-none mt-3">
