--- a/src/main/resources/templates/modaleCreateGame.html
+++ b/src/main/resources/templates/modaleCreateGame.html
@@ -2,24 +2,31 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header border-bottom-0">
-        <h5 class="modal-title" id="exampleModalLabel">Création du jeux</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Ajout du jeux à l'évenement</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
+        
       </div>
-      <form method="POST" action="/addRegistrationGame" enctype="multipart/form-data">
-        <div class="modal-body">
-          <div th:if="${gamesSocietyOnly.size() !=0}" class="form-group mt-1 mb-1">
-            <label for="name">Choisissez un jeu de votre bibliotheque:</label>
-			<div class="d-flex row align-item-center justify-content-around">
-				<select th:field="*{gamesSocietyOnly}" class="custom-select col-6">
-				    <option value="Selectionner un jeu" selected disabled hidden>Selectionner un jeu</option>
-				    <option th:each="game : ${gamesSocietyOnly}" th:value="${game.name}" th:text="${game.name}"/>
-				</select>
-				<button type="submit" class="btn btn-primary col-4">Ajouter</button>
-				<p class="align-self-center text-center col-12 mt-3 mb-0">ou</p>
-			</div>
-         </div>
+      	
+        <div class="modal-body pt-0">
+        <hr />
+          <form method="POST" action="/addGame" enctype="multipart/form-data">
+	          <div th:if="${gamesSocietyOnly.size() !=0}" class="form-group mt-1 mb-1">
+	            <label for="name">Choisissez un jeu de votre bibliotheque:</label>
+				<div class="d-flex row align-item-center justify-content-around">
+					<select th:field="*{gamesSocietyOnly}" class="custom-select col-6">
+					    <option value="Selectionner un jeu" selected disabled hidden>Selectionner un jeu</option>
+					    <option th:each="game : ${gamesSocietyOnly}" name="gameId" th:value="${game.id}" th:text="${game.name}"/>
+					</select>
+					<button type="submit" class="btn btn-primary col-4">Ajouter</button>
+					<p class="align-self-center text-center col-12 mt-3 mb-0">ou</p>
+				</div>
+	         </div>
+	     </form>
+         <h5 class="modal-title mb-3" id="exampleModalLabel">Création du jeux</h5>
+         <hr />
+         <form method="POST" action="/addRegistrationGame" enctype="multipart/form-data">
           <div class="form-group">
             <label for="name">Nom du jeux</label>
             <input type="text" class="form-control" id="name" name="name" aria-describedby="nameGameHelp" placeholder="nom du jeux">
