--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -18,10 +18,6 @@
     padding: 0;
 }
 
-.row {
-	margin: 0!important;
-}
-
 textarea {
     resize: none;
 }
@@ -306,6 +302,7 @@ input:checked ~ .switch_on {
 }
 
 .subscribeModifBtn {
+	
 	height: 3rem;
 	font-size: 1.4rem;
 }
@@ -322,10 +319,6 @@ input:checked ~ .switch_on {
 	border: 1px solid var(--grey)!important;
 }
 
-.regBtn {
-	margin-top: 1.5rem;
-	margin-left: 80%!important
-}
 
 @media (max-width: 768px) {  
 	
@@ -353,13 +346,11 @@ input:checked ~ .switch_on {
 		font-size: 1.2rem!important;
 	}
 	
-	.regBtn {
-		height: 2.8rem;
-		font-size: 1rem;
-		margin-left: 82%!important;
-	}
-	
 	.pcard {
 		height: 2rem;
+	}
+	
+	.customCard {
+		width: 96%;
 	}
 }
