--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -19,11 +19,11 @@
 <body>
     <header th:replace="navBar.html :: top"></header>
     <main>
-        <section class="container-fluid" id="myRegistration">
+    	<div class="pcard"  id="myRegistration"></div>
+        <section class="container-fluid">
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 mb-4 title">Mes informations générales</h2>
             </div>
-			<div class="pcard"></div>
             <form method="post" action="/submitRegistration" class="border m-3 p-3 p-4 col-sm-10 col-lg-7 mx-auto">
                 <input type="hidden" name="eventId" th:value="${registration.event?.id}">
                 <input type="hidden" id="pricePerTable" name="pricePerTable" th:value="${registration.event?.pricePerTable}" disabled>
