finish ajout de jeux a l'inscription depuis ma bibliotheque

--- a/src/main/resources/templates/modaleCreateGame.html
+++ b/src/main/resources/templates/modaleCreateGame.html
@@ -10,27 +10,29 @@
       </div>
       	
         <div class="modal-body pt-0">
-        <hr />
-          <form method="POST" action="/addGame" enctype="multipart/form-data">
+        
+          <form method="POST" action="/addGameToRegistration" enctype="multipart/form-data">
 	          <div th:if="${gamesSocietyOnly.size() !=0}" class="form-group mt-1 mb-1">
+	          	<hr />
 	            <label for="name">Choisissez un jeu de votre bibliotheque:</label>
 				<div class="d-flex row align-item-center justify-content-around">
-					<select th:field="*{gamesSocietyOnly}" class="custom-select col-6">
-					    <option value="Selectionner un jeu" selected disabled hidden>Selectionner un jeu</option>
-					    <option th:each="game : ${gamesSocietyOnly}" name="gameId" th:value="${game.id}" th:text="${game.name}"/>
+					<select name="gameId" class="custom-select col-6">
+					    <option value="" selected disabled>Selectionner un jeu</option>
+					    <option th:each="game : ${gamesSocietyOnly}" th:value="${game.id}" th:text="${game.name}"/>
 					</select>
+					<input type="hidden" name="registrationId" th:value="${registration.id}">
 					<button type="submit" class="btn btn-primary col-4">Ajouter</button>
 					<p class="align-self-center text-center col-12 mt-3 mb-0">ou</p>
 				</div>
 	         </div>
 	     </form>
-         <h5 class="modal-title mb-3" id="exampleModalLabel">Création du jeux</h5>
+         <h5 class="modal-title mb-3" id="exampleModalLabel">Création du jeu</h5>
          <hr />
          <form method="POST" action="/addRegistrationGame" enctype="multipart/form-data">
           <div class="form-group">
             <label for="name">Nom du jeux</label>
             <input type="text" class="form-control" id="name" name="name" aria-describedby="nameGameHelp" placeholder="nom du jeux">
-            <small id="nameGameHelp" class="form-text text-muted">Indiquez le nom du jeux</small>
+            <small id="nameGameHelp" class="form-text text-muted">Indiquez le nom du jeu</small>
           </div>
           <div class="form-group">
             	<label for="picture">Image:</label>
