--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -64,14 +64,14 @@
 							<div class="card-header">
 								<h2 th:text="|Récapitulatif inscription evenement :	${registration.event.name}|"></h2>	
 							</div>
-							<div class="card-body p-1">
+							<div class="card-body p-1 p-md-3">
 								<h4 class="card-title mt-2" th:text="|Demande d'inscription effectuée le :     ${#dates.format(registration.subscriptionDate, 'dd/MM/yyyy')}|"></h4>
 								<p class="row text-center justify-content-center mb-1">
 									<span class="col-6 col-lg-3 badge badge-pill badge-warning d-inline-flex align-items-center justify-content-center" th:if="${registration.state} == 'pending'">EN ATTENTE</span>
 									<span class="badge badge-pill badge-success d-inline-flex align-items-center justify-content-center" th:if="${registration.state} == 'validated'">VALID&Eacute;E</span> 
 									<span class="badge badge-pill badge-danger d-inline-flex align-items-center justify-content-center" th:if="${registration.state} == 'rejected'">REFUS&Eacute;E</span>
 								</p>
-								<fieldset class="border p-1 text-left">
+								<fieldset class="border p-1 p-md-3 text-left">
 									<legend class="w-auto">Récapitulatif de vos demandes</legend>
 									<div class="row align-items-center">
 										<div class="col-12 col-sm-10">
@@ -87,11 +87,11 @@
 										</div>
 									</div>  
 								</fieldset>
-								<fieldset class="border p-1 text-left">
+								<fieldset class="border p-1 p-md-3 text-left">
 									<legend class="w-auto">Vos jeux inscrits</legend>
 									<div class="fluid-container">
 										<div class="row align-items-center">										
-											 <div class="card col-12 col-md-6 col-lg-2 gameCardTop p-0" th:each="game : ${registration.games}" > <!-- th:if="${registration.society} == ${game.society}" -->
+											 <div class="card col-12 col-md-6 col-lg-2 gameCardTop p-0 mx-1" th:each="game : ${registration.games}" > <!-- th:if="${registration.society} == ${game.society}" -->
 												<img th:src="${game.picture}"  class="card-img-top" alt="image du jeu">
 												<div class="card-body gameCardBody p-0 m-0">
 													<p class="card-text" th:text="${game.name}"></p> 
@@ -103,7 +103,7 @@
 										</div>	 
 									</div> 
 								</fieldset>
-								<fieldset class="border p-1 text-left">
+								<fieldset class="border p-1 p-md-3 text-left">
 									<legend class="w-auto">Vos collaborateurs</legend>
 									<div class="row align-items-center">
 										<div class="col-sm-12">
@@ -112,7 +112,7 @@
 										</div>
 									</div>  
 								</fieldset>
-								<fieldset class="border p-1 text-left">
+								<fieldset class="border p-1 p-md-3 text-left">
 									<legend class="w-auto">Coût de votre participation</legend>
 									<div class="row align-items-center">
 										<div class="col-sm-12">
@@ -120,7 +120,7 @@
 										</div>
 									</div>  
 								</fieldset>
-								<fieldset class="border p-1 text-left">
+								<fieldset class="border p-1 p-md-3 text-left">
 									<legend class="w-auto">Vos commentaires</legend>
 									<div class="row align-items-center">
 										<div class="col-sm-12">
