--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -159,7 +159,7 @@
                 <div class="row justify-content-center">
                     <div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="gameRegistration : ${gamesRegistration}">
                         <div class="img-container">
-                            <img class="card-img-top card-img-custom" th:if="${gameRegistration.picture !=''}" th:src="|..${gameRegistration.picture}|" alt="Card image cap">
+                            <img class="card-img-top card-img-custom" th:if="${gameRegistration.picture !=''}" th:src="${gameRegistration.picture}" alt="Card image cap">
                             <img class="card-img-top card-img-custom" th:unless="${gameRegistration.picture !=''}" th:src="@{${connectedUser.getProfilePicture()}}" alt="Card image cap">
                         </div>
                         <div class="card-body card-body-custom">
