--- a/src/main/resources/static/CSS/subscribeEditorModification.css
+++ b/src/main/resources/static/CSS/subscribeEditorModification.css
@@ -66,11 +66,11 @@
 	cursor:pointer;
 }
 
-
 .deleteButton{
 	background: none;
     border: none;
     padding: 0;
+}
 
 }
 
@@ -85,7 +85,21 @@
 }
 
 .svgActionAgent{
+	background: none;
+	border: none;
 	fill:orange;
-	width:25%;
+	width:45%;
 	cursor:pointer;
+}
+
+.svgActionAgentDelete{
+	background: none;
+	border: none;
+	fill:red;
+	width:45%;
+	cursor:pointer;
+}
+.theadAgent{
+	background: #EC5D31;
+	color: white;
 }
