--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +15,6 @@
     <link rel="stylesheet" href="../CSS/subscribeEditorModification.css">
     <title>Modification de votre inscription</title>
 </head>
-
 <body>
     <header th:replace="navBar.html :: top"></header>
     <main>
@@ -35,7 +33,6 @@
                     <label for="tablesQuantity" th:text="|Nombre de tables souhaitées (${registration.event?.maxTablesPerEditor} max.) :|">Nombre de tables souhaitées :</label>
                     <input type="number" id="tablesQuantity" class="form-control w-25" name="tablesQuantity" th:value="${registration.tablesQuantity}">
                 </div>
-
                 <div class="form-group">
                     <label for="electricalSupplyNeed">Besoin d'un raccord au réseau éléctrique :</label>
                     <div>
@@ -47,7 +44,6 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label for="saleOption">Souhaitez-vous vendre des produits lors de l'évènement ?</label>
                     <div class="m-auto">
@@ -59,7 +55,6 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <div>
                         <label for="agent">Des représentants de votre entreprise seront-ils présents ?</label>
@@ -72,9 +67,7 @@
                             <div class="switch_off">NON</div>
                         </label>
                     </div>
-
                 </div>
-
                 <div class="form-group">
                     <div class="volunteer">
                         <label for="volunteer">Aurez-vous besoin de bénévoles ?</label>
@@ -88,12 +81,10 @@
                         </label>
                     </div>
                 </div>
-
                 <div class="form-group">
                     <label for="comments">Ajouter un commentaire</label>
                     <textarea id="comments" class="form-control comments" name="comments" th:text="${registration.comments}"></textarea>
                 </div>
-
                 <div>
                     <div id="finalCost" class="registration_cost text-center mt-4">Coût de l'inscription : <span class="registrationCost">0</span> €</div>
                 </div>
@@ -104,66 +95,6 @@
             </form>
         </section>
         <hr class="my-5" />
-        <section id="agents">
-        <div class="pcard"></div>
-            <div class="container containerTitleStyle">
-                <h2 class="col-sm-12 p-0 title">Mes collaborateurs présents à l'évenement:</h2>
-            </div>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <table class="table table-striped table-bordered col-12">
-                        <thead>
-                            <tr>
-                                <th scope="col">Nom</th>
-                                <th scope="col">Prénom</th>
-                                <th scope="col">Numéro</th>
-                                <th scope="col">Mail</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>0606060606</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>0606060606</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>0606060606</td>
-                                <td>@twitter</td>
-                            </tr>
-                            <tr>
-                                <td colspan="4" class="text-center font-weight-bold">Ajouter un collaborateur<br />
-                                    <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus" class="svg-inline--fa fa-plus fa-w-14 svgAddAgent" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                                        <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"></path>
-                                    </svg>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-
-                    <h3 class="fs-title">Informations complémentaires</h2>
-                        <div>
-                            <label for="comments" class="w-100 text-left pt-3">Ajouter un commentaire</label>
-                            <textarea id="comments" class="comments" name="comments" th:text="${registration.comments}"></textarea>
-                        </div>
-                        <div>
-                            <label id="finalCost" for="cost" class="registration_cost w-100 text-center mt-4">Coût de l'inscription : 65 euros</label>
-                        </div>
-                        <button type="submit" name="registration" class="next action-button">Valider</button>
-            </form>
-
-        </section>
-        <hr />
         <section id="games">
         <div class="pcard"></div>
             <div class="container containerTitleStyle">
@@ -209,10 +140,68 @@
             </div>
             <div th:replace="modaleModificationGame :: modaleModification"></div>
             <div th:replace="modaleCreateGame :: modaleCreation"></div>
-
-			<hr />
         </section>
-
+        <hr class="my-5" />
+		<section id="agents">
+            <div class="container containerTitleStyle">
+                <h2 class="col-sm-12 p-0 mb-5 title">Mes collaborateurs présents à l'évenement:</h2>
+            </div>
+            <div class="fluid-container">
+                <div class="row justify-content-center">
+                    <div class="col-10 center-block">
+                        <p>Ajouter ici les coordonnées des personnes de votre société (ou qui représenteront votre société) lors de la manifestation.</p>
+                    </div>
+                    <div class="col-12 col-md-10 table-responsive">
+                        <table class="table table-striped table-bordered card-custom">
+                            <thead class="theadAgent">
+                                <tr>
+                                    <th class="col-3" scope="col">Nom</th>
+                                    <th class="col-3" scope="col">Prénom</th>
+                                    <th class="col-2" scope="col">Téléphone</th>
+                                    <th class="col-3" scope="col">Mail</th>
+                                    <th class="col-1" scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr >
+                                    <form method="POST" action="/addRegistrationAgent">
+                                        <td><input class="form-control input-sm border-top-0 border-left-1 border-bottom-1 border-right-0" type="text" id="firstName" name="firstName" placeholder="Nom" required></td>
+                                        <td><input class="form-control input-sm border-top-0 border-left-1 border-bottom-1 border-right-0" type="text" id="lastName" name="lastName" placeholder="Prénom" > </td>
+                                        <td><input class="form-control input-sm border-top-0 border-left-1 border-bottom-1 border-right-0" type="tel" id="phone" name="phone" placeholder="Téléphone" > </td>
+                                        <td><input class="form-control input-sm border-top-0 border-left-1 border-bottom-1 border-right-0" type="email" id="email" name="mail" placeholder="Email" > </td>
+                                        <input type="hidden" name="registrationId" th:value="${registration.id}">
+                                        <input type="hidden" name="societyId" th:value="${society.id}">
+                                        <td class="text-center align-middle">
+                                            <button type="submit" class="svgActionAgent">
+                                                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle" class="svg-inline--fa fa-plus-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                                    <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>
+                                            </button>
+                                        </td>
+                                    </form>
+                                </tr>
+                                <tr th:each="agentRegistration : ${agentsRegistration}">
+                                    <form method="POST" action="/deleteRegistrationAgent">
+                                        <input type="hidden" name="registrationId" th:value="${registration.id}">
+                                        <input type="hidden" name="agentRegistrationId" th:value="${agentRegistration.id}">
+                                        <td th:text="${agentRegistration.firstName}"></td>
+                                        <td th:text="${agentRegistration.lastName}"></td>
+                                        <td th:text="${agentRegistration.phone}"> </td>
+                                        <td th:text="${agentRegistration.mail}"></td>
+                                        <td class="text-center align-middle">
+                                            <button type="submit" class="svgActionAgentDelete">
+                                                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                                    <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path>
+                                                </svg>
+                                            </button>
+                                        </td>
+                                    </form> 
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>      
+        </section>
     </main>
     <footer th:replace="footer :: bottom"></footer>
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -222,6 +211,4 @@
     <script src="JS/updateEditorRegistration.js"></script>
     <script src="JS/picturePreview.js"></script>
 </body>
-
 </html>
-
