homepage hr fix

--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -319,6 +319,10 @@ input:checked ~ .switch_on {
 	border: 1px solid var(--grey)!important;
 }
 
+.mainPanel {
+	width: 100%;
+}
+
 
 @media (max-width: 768px) {  
 	
