--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -147,11 +147,11 @@
                 <h2 class="col-sm-12 p-0 mb-5 title">Mes collaborateurs présents à l'évenement:</h2>
             </div>
             <div class="fluid-container">
-                <div class="row justify-content-center">
+                <div class="row justify-content-center col-sm-12 col-lg-7 mx-auto">
                     <div class="col-10 center-block">
                         <p>Ajouter ici les coordonnées des personnes de votre société (ou qui représenteront votre société) lors de la manifestation.</p>
                     </div>
-                    <div class="col-12 col-md-10 table-responsive">
+                    <div class="table-responsive">
                         <table class="table table-striped table-bordered card-custom">
                             <thead class="theadAgent">
                                 <tr>
