--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -24,15 +24,15 @@
 	      <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">	
 	        <li class="nav-item mx-auto">
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#evenement">Evenements</a>
-	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#myRegistration">Mon Inscription</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#myRegistration">Mes informations générales</a>
 	        </li>
 	        <li class="nav-item mx-auto">
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#inscription">Mon Inscription</a>
-	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#agents">Mes Collaborateurs</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#games">Mes Jeux</a>
 	        </li>
 	        <li class="nav-item mx-auto">
 	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'home'" href="#information">Mes Informations</a>
-	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#games">Mes Jeux</a>
+	          <a class="nav-link navElement" th:if="${navbarLinks.currentPage} == 'subscribeEditorModification'" href="#agents">Mes Collaborateurs</a>
 	        </li>
 	        <div class="dropdown-divider mt-3 mb-0"></div>
 	        <li class="nav-item mx-auto d-block d-lg-none mt-3">
