--- a/src/main/resources/static/CSS/subscribeEditorModification.css
+++ b/src/main/resources/static/CSS/subscribeEditorModification.css
@@ -17,8 +17,8 @@
 }
 
 .card-img-custom{
-    width: 100%;
-    height: 20vh;
+    width: auto;
+    height: 15vh;
     object-fit: cover;
     position:center;
     cursor:pointer;
@@ -84,6 +84,9 @@
     align-self: center;
 }
 
+.imgContainerCustom{
+	max-height:20vh;
+}
 .svgActionAgent{
 	background: none;
 	border: none;
