--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -112,7 +112,7 @@
             <div class="fluid-container">
                 <div class="row justify-content-center">
                     <div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="gameRegistration : ${gamesRegistration}">
-                        <div class="img-container">
+                        <div class="img-container d-flex justify-content-center imgContainerCustom">
                             <img class="card-img-top card-img-custom" th:if="${gameRegistration.picture !='' AND gameRegistration.picture !=null}" th:src="|..${gameRegistration.picture}|" alt="Card image cap">
                             <img class="card-img-top card-img-custom" th:unless="${gameRegistration.picture !='' AND gameRegistration.picture !=null}" th:src="@{${connectedUser.getProfilePicture()}}" alt="Card image cap">
                         </div>
