add agent home editor

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -111,8 +111,28 @@
 									<legend class="w-auto">Vos collaborateurs</legend>
 									<div class="row align-items-center">
 										<div class="col-sm-12">
-											<p th:if="${registration.agentProvided}">Vous avez indiqué que vos collaborateurs participeront à l'évènement. Merci de compléter leur inscription.</p>		
-											<p th:unless="${registration.agentProvided}">Aucun collaborateur de votre entreprise ne sera présent.</p>								
+											<p th:if="${registration.agentProvided} and ${#lists.isEmpty(registration.agents)}">Vous avez indiqué que vos collaborateurs participeront à l'évènement. Merci de compléter leur inscription.</p>		
+											<p th:unless="${registration.agentProvided}">Aucun collaborateur de votre entreprise ne sera présent.</p>
+											<div th:if="${not #lists.isEmpty(registration.agents)}" class="table-responsive">
+												<table class="table table-striped table-bordered card-custom">
+													<thead class="theadAgent">
+														<tr>
+															<th class="col-3" scope="col">Nom</th>
+															<th class="col-3" scope="col">Prénom</th>
+															<th class="col-2" scope="col">Téléphone</th>
+															<th class="col-3" scope="col">Mail</th>
+														</tr>
+													</thead>
+													<tbody>
+														<tr th:each="agentRegistration : ${registration.agents}">
+															<td th:text="${agentRegistration.firstName}"></td>
+															<td th:text="${agentRegistration.lastName}"></td>
+															<td th:text="${agentRegistration.phone}"> </td>
+															<td th:text="${agentRegistration.mail}"></td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
 										</div>
 									</div>  
 								</fieldset>
