--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -18,12 +18,13 @@
 <body>
     <header th:replace="navBar.html :: top"></header>
     <main>
-    	<div class="pcard"  id="myRegistration"></div>
         <section class="container-fluid">
+	        <div class="row justify-content-center">
+	        	<h1 class="col-12 text-center mb-5 mt-3" id="myRegistration">Modification de mes informations d'incription</h1>
+	        </div>
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 mb-4 title">Mes informations générales</h2>
             </div>
-			<div class="pcard"></div>
             <form method="post" action="/updateEditorRegistration" class="border m-3 p-3 p-4 col-sm-10 col-lg-7 mx-auto th:" th:object="${registration}">
 				<input type="hidden" name="eventId" th:value="${event.id}" disabled>
                 <input type="hidden" id="pricePerTable" name="pricePerTable" th:value="${event.pricePerTable}" disabled>
@@ -31,7 +32,6 @@
                 <input type="hidden" id="maxTablesPerEditor" name="maxTablesPerEditor" th:value="${event.maxTablesPerEditor}" disabled>
                 <input type="hidden" id="userId" name="userId" th:value="${connectedUser.id}" disabled>
 				<input type="hidden" id="registrationId" name="id" th:value="${registration.id}" />
-
                 <div class="form-group">
                     <label for="tablesQuantity" th:text="|Nombre de tables souhaitées (${registration.event?.maxTablesPerEditor} max.) :|">Nombre de tables souhaitées :</label>
                     <input type="number" id="tablesQuantity" class="form-control w-25" name="tablesQuantity" th:value="${registration.tablesQuantity}">
@@ -97,7 +97,7 @@
                 </div>
             </form>
         </section>
-        <hr class="my-5" />
+        <hr class="col-6 my-5 mx-auto" />
         <section id="games">
         <div class="pcard"></div>
             <div class="container containerTitleStyle">
@@ -144,7 +144,7 @@
             <div th:replace="modaleModificationGame :: modaleModification"></div>
             <div th:replace="modaleCreateGame :: modaleCreation"></div>
         </section>
-        <hr class="my-5" />
+        <hr class="col-6 my-5 mx-auto" />
 		<section id="agents">
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 mb-5 title">Mes collaborateurs présents à l'évenement:</h2>
