--- a/src/main/resources/static/CSS/subscribeEditorModification.css
+++ b/src/main/resources/static/CSS/subscribeEditorModification.css
@@ -104,8 +104,14 @@
 	color: white;
 }
 
+
+
 .table_error {
     color: var(--danger);
     font-size: 0.9em;
     font-style: italic;
+}
+
+.returnBtn {
+	width: 100%;
 }
