--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -115,7 +115,7 @@
 											<p th:unless="${registration.agentProvided}">Aucun collaborateur de votre entreprise ne sera présent.</p>
 											<div th:if="${not #lists.isEmpty(registration.agents)}" class="table-responsive">
 												<table class="table table-striped table-bordered card-custom">
-													<thead class="theadAgent">
+													<thead>
 														<tr>
 															<th class="col-3" scope="col">Nom</th>
 															<th class="col-3" scope="col">Prénom</th>
