--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <header th:replace="navBar.html :: top"></header>
+	<header th:replace="navBar.html :: top"></header>
     <main>
         <section class="container-fluid">
 	        <div class="row justify-content-center">
@@ -150,8 +150,8 @@
             <div th:replace="modaleModificationGame :: modaleModification"></div>
             <div th:replace="modaleCreateGame :: modaleCreation"></div>
         </section>
-        <hr class="col-6 my-5 mx-auto" />
-		<section id="agents">
+        <hr id="agents" class="col-6 my-5 mx-auto" />
+		<section>
             <div class="container containerTitleStyle">
                 <h2 class="col-sm-12 p-0 mb-5 title">Mes collaborateurs présents à l'évenement:</h2>
             </div>
@@ -210,6 +210,9 @@
                         </table>
                     </div>
                 </div>
+            </div>
+            <div class="row justify-content-center mt-5 mb-2">
+            	<a class="col-6 col-lg-1 align-items-center editRegPageBackLink" href="/accueil_editeur"><button type="button" class="btn btn-primary returnBtn">RETOUR</button></a>
             </div>
         </section>
         <div th:replace="toasts :: toats"></div>
